# Elevator-Project-OOPS

./: .gitignore  LICENSE  README.md  setup.md
.github/workflows/: release.yml
SmartElevatorSystem/: CMakeLists.txt  README.md  setup.md
SmartElevatorSystem/include/: Building.h  Display.h  Elevator.h  Exceptions.h  Floor.h  ISchedulingAlgorithm.h  NearestScanScheduler.h  Request.h  Scheduler.h
SmartElevatorSystem/src/: Building.cpp  Display.cpp  Elevator.cpp  Floor.cpp  NearestScanScheduler.cpp  Request.cpp  Scheduler.cpp  main.cpp
